# term-challenge-v2

./: .env.example  .gitignore  .gitmodules  .releaserc.json  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.server  README.md  docker-compose.yml  pr_diff_full.txt  registry.json  release-please-config.json  rust-toolchain-nightly.toml  test_agent.py  test_compilation.sh
.cargo/: config.toml
.githooks/: install.sh  pre-commit  pre-push
.github/workflows/: ci.yml  release.yml
bins/mock-subtensor/: Cargo.toml  Dockerfile
bins/mock-subtensor/src/: chain.rs  jsonrpc.rs  main.rs  state.rs  websocket.rs
bins/platform-cli/: Cargo.toml
bins/platform-cli/src/: main.rs
bins/utils/: Cargo.toml
bins/validator-node/: Cargo.toml
challenges/: README.md
checkpoints/: checkpoint3.json  checkpoint4.json
cli/: Cargo.toml
cli/src/: app.rs  main.rs  rpc.rs  ui.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/core/: compat.rs  mod.rs
coverage-html/html/: index.html
coverage/html/: index.html
crates/challenge-registry/: Cargo.toml
crates/challenge-registry/src/: discovery.rs  error.rs  health.rs  lib.rs  lifecycle.rs  migration.rs  registry.rs  state.rs  version.rs
crates/challenge-sdk/: Cargo.toml
crates/challenge-sdk-wasm/: Cargo.toml
crates/challenge-sdk-wasm/src/: alloc_impl.rs  host_functions.rs  lib.rs  llm_types.rs  types.rs
crates/core/: Cargo.toml
crates/core/src/: challenge.rs  checkpoint.rs  constants.rs  error.rs  lib.rs  message.rs  restoration.rs  schema_guard.rs  state.rs  state_versioning.rs  types.rs
crates/rpc-server/: Cargo.toml
crates/rpc-server/src/: auth.rs  handlers.rs  health.rs  jsonrpc.rs  lib.rs  server.rs  types.rs
crates/storage/: Cargo.toml
crates/wasm-runtime-interface/: Cargo.toml
crates/wasm-runtime-interface/src/: bridge.rs  consensus.rs  container.rs  data.rs  exec.rs  lib.rs  llm.rs  network.rs  runtime.rs  sandbox.rs  storage.rs  terminal.rs  time.rs
docker/: AGENTS.md  Dockerfile  Dockerfile.challenge  Dockerfile.compiler  Dockerfile.validator  docker-compose.yml
docker/llm-reviewer/: Dockerfile  agent.py
docs/: AGENTS.md  api-reference.md  architecture.md  challenge-integration.md  challenges.md  cli-reference.md  getting-started.md  migration-guide.md  platform-integration.md  scoring.md  security.md  validator.md  validator_wasm_audit.md
docs/agent-development/: overview.md  python.md  rust.md  typescript.md
docs/miner/: agent-development.md  getting-started.md  how-to-mine.md  sdk-reference.md  submission.md
docs/operations/: validator.md
docs/reference/: api-reference.md  cli-reference.md  multi-agent-review.md
docs/validator/: setup.md  troubleshooting.md
examples/: grok_agent.py  simple_agent.py  terminus_2_agent.py
examples/validator_agent/: README.md  agent.py  requirements.txt
lib/: Cargo.toml
lib/src/: dataset.rs  lib.rs
lib/src/admin/: mod.rs
lib/src/cache/: mod.rs
lib/src/chain/: mod.rs
lib/src/synthetic/: mod.rs
lib/src/util/: hotkey.rs  mod.rs
lib/src/validation/: mod.rs
lib/src/worker/: mod.rs
migrations/: 004_validator_assignments.sql  020_checkpoint3_checkpoint4.sql  022_agent_transparency.sql  023_llm_rules.sql  023_subnet_settings.sql  023_validation_rules.sql  024_subnet_settings.sql  026_llm_review_called.sql  027_llm_review_retry_count.sql  033_plagiarism_detection.sql  034_llm_review_prompt_keys.sql  035_llm_review_instructions.sql  036_separate_llm_review_columns.sql  038_swe_forge_integration.sql  AGENTS.md
scripts/: build-wasm.sh  install-docker.sh  setup-hooks.sh  test-all.sh  test-comprehensive.sh  test-harness.sh  verify-nightly-config.sh
scripts/multi_agent_review/: __init__.py  __main__.py  consensus.py  conversation.py
sdk/: PROTOCOL.md  README.md
sdk/examples/rust/: Cargo.toml  llm_agent.rs  simple_agent.rs
sdk/python/: README.md  pyproject.toml
sdk/python/term_sdk/: __init__.py  agent.py  cost.py  decorators.py  exceptions.py  harness.py  llm.py  llm_client.py  protocol.py  providers.py  runner.py  terminal.py  types.py
sdk/python/tests/: test_agent.py  test_llm.py  test_sdk.py
sdk/rust/: Cargo.toml  README.md
sdk/rust/src/: agent.rs  cost.rs  error.rs  harness.rs  lib.rs  llm.rs  protocol.rs  providers.rs  runner.rs  terminal.rs  types.rs
sdk/typescript/: package.json
server/: Cargo.toml
server/src/: agent_storage.rs  ast_validation.rs  dataset.rs  lib.rs  llm_review.rs  main.rs  routes.rs  scoring.rs  server.rs  submission.rs  tasks.rs  timeout_handler.rs  types.rs
src/: AGENTS.md  agent_queue.rs  agent_registry.rs  agent_submission.rs  api.rs  api_legacy.rs  assignment_monitor.rs  auth.rs  block_sync.rs  central_client.rs  chain_storage.rs  chain_storage_old.rs  challenge.rs  code_visibility.rs  compat.rs  compile_worker.rs  compiler.rs  config.rs  container_backend.rs  distributed_store.rs  docker.rs  emission.rs  encrypted_api_key.rs  epoch.rs  evaluation_orchestrator.rs  evaluation_pipeline.rs  evaluator.rs  lib.rs  llm_client.rs  llm_review.rs  local_storage.rs  metagraph_cache.rs  migrations.rs  package_validator.rs  pg_storage.rs  platform_auth.rs  platform_llm.rs  platform_ws_client.rs  python_whitelist.rs  reward_decay.rs  (+16 more)
src/admin/: mod.rs  subnet.rs  sudo.rs
storage/: Cargo.toml
storage/src/: chain.rs  lib.rs  local.rs  pg.rs  traits.rs
storage/src/postgres/: evaluations.rs  leaderboard.rs  mod.rs  submissions.rs  task_logs.rs  validators.rs
test-env/: docker-compose.test.yml  generate_keys.py  test_async_flow.py  test_flow.py  test_full_flow.py  test_keys.json
tests/: AGENTS.md  Cargo.toml  bittensor_tests.rs  blockchain_state_tests.rs  checkpoint_tests.rs  epoch_tests.rs  integration_terminus2.rs  live_evaluation_test.rs  rpc_server_tests.rs  storage_tests.rs  sudo_action_tests.rs  terminal_bench_integration.rs
wasm/: Cargo.toml
wasm/src/: agent_storage.rs  ast_validation.rs  dataset.rs  lib.rs  llm_review.rs  routes.rs  scoring.rs  submission.rs  tasks.rs  timeout_handler.rs  types.rs
wasm/src/api/: handlers.rs
wasm/src/core/: config.rs  mod.rs  prelude.rs  types.rs
(+351 files in other folders)
