[workspace]
resolver = "2"
members = [".", "wasm", "cli", "core", "server", "storage"]
default-members = ["wasm"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Platform Network"]
license = "Apache-2.0"
repository = "https://github.com/PlatformNetwork/term-challenge"

[workspace.dependencies]
platform-challenge-sdk = { git = "https://github.com/PlatformNetwork/platform-v2", branch = "main", features = ["http-server"] }
platform-core = { git = "https://github.com/PlatformNetwork/platform-v2", branch = "main" }
sp-core = { version = "31.0", default-features = false, features = ["std"] }
sled = "0.34"
bincode = "1.3"
aes-gcm = "0.10"
parity-scale-codec = { version = "3.7.5", features = ["derive"] }

[package]
name = "term-challenge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Term Challenge shared library — HuggingFace dataset handler"

[lib]
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.40", features = ["fs"] }
tracing = "0.1"
