[package]
name = "term-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core compatibility layer — re-exports platform SDK types for term-challenge"

[dependencies]
platform-core = { path = "../../platform-v2/crates/core" }
platform-challenge-sdk = { path = "../../platform-v2/crates/challenge-sdk" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.40", features = ["rt", "macros"] }
