[package]
name = "term-challenge-lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Terminal Benchmark Challenge — validator-side library"

[lib]
name = "term_challenge_lib"
path = "src/lib.rs"

[[bin]]
name = "term-sudo"
path = "src/bin/term-sudo.rs"

[dependencies]
platform-core = { git = "https://github.com/PlatformNetwork/platform-v2", branch = "main" }
platform-challenge-sdk = { git = "https://github.com/PlatformNetwork/platform-v2", branch = "main" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }

