[package]
name = "term-challenge-lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Terminal Benchmark Challenge — validator-side library"

[lib]
name = "term_challenge_lib"
path = "src/lib.rs"

[[bin]]
name = "term-sudo"
path = "src/bin/term-sudo.rs"

[dependencies]
platform-core = { workspace = true }
platform-challenge-sdk = { workspace = true }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }

