[package]
name = "term-challenge-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Terminal Benchmark Challenge server — implements ServerChallenge trait with ChallengeDatabase storage"

[lib]
path = "src/lib.rs"

[[bin]]
name = "term-challenge-server"
path = "src/main.rs"

[dependencies]
platform-challenge-sdk = { git = "https://github.com/PlatformNetwork/platform-v2", branch = "main", features = ["http-server"] }

axum = { version = "0.7", features = ["json"] }
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
