[package]
name = "term-challenge-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Terminal Benchmark Challenge server — implements ServerChallenge trait with ChallengeDatabase storage"

[dependencies]
platform-challenge-sdk = { workspace = true }

axum = { version = "0.7", features = ["json"] }
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
tracing = "0.1"
uuid = { version = "1.10", features = ["v4", "serde"] }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
