[package]
name = "term-challenge-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "PostgreSQL storage layer for Term Challenge using platform-v2 SDK types"

[dependencies]
platform-core = { git = "https://github.com/PlatformNetwork/platform-v2", branch = "main" }
platform-challenge-sdk = { git = "https://github.com/PlatformNetwork/platform-v2", branch = "main" }

tokio = { version = "1.40", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
deadpool-postgres = { version = "0.14", features = ["serde"] }
postgres-types = { version = "0.2", features = ["derive", "with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
tracing = "0.1"
