[package]
name = "term-challenge-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Storage layer for Term Challenge using platform SDK types"

[dependencies]
platform-core = { git = "https://github.com/PlatformNetwork/platform-v2", branch = "main" }
platform-challenge-sdk = { git = "https://github.com/PlatformNetwork/platform-v2", branch = "main" }

sled = "0.34"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
