[package]
name = "term-challenge-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Storage layer for Term Challenge using platform SDK types"

[dependencies]
platform-core = { workspace = true }
platform-challenge-sdk = { workspace = true }

tokio = { version = "1.40", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
deadpool-postgres = { version = "0.14", features = ["serde"] }
postgres-types = { version = "0.2", features = ["derive", "with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }

sled = "0.34"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
tracing = "0.1"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
