[package]
name = "term-challenge-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Terminal Benchmark Challenge – WASM evaluation module"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
platform-challenge-sdk-wasm = { git = "https://github.com/PlatformNetwork/platform-v2", branch = "main" }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
bincode = { version = "1.3", default-features = false }