[package]
name = "mock-subtensor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace deps
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
bs58 = "0.5"

# WebSocket / HTTP
tokio-tungstenite = "0.24"
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Internal deps
platform-bittensor = { path = "../../crates/bittensor-integration" }

[lints]
workspace = true
