[package]
name = "platform-cli"
version.workspace = true
edition.workspace = true
description = "Platform CLI — download and manage challenge CLIs"

[[bin]]
name = "platform"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
toml = "0.8"
dirs = "5"
semver = { version = "1", features = ["serde"] }
