[package]
name = "platform-challenge-registry"
version.workspace = true
edition.workspace = true
description = "Challenge registry and lifecycle management for Platform Network"

[dependencies]
wasm-runtime-interface = { path = "../wasm-runtime-interface" }
platform-core = { path = "../core" }
platform-challenge-sdk = { path = "../challenge-sdk" }
platform-storage = { path = "../storage" }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# Utils
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }

# Crypto for checksums
sha2 = { workspace = true }
hex = { workspace = true }

# Versioning
semver = "1.0"

# Health checks
reqwest = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }