[package]
name = "platform-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
bs58 = "0.5"
wasm-runtime-interface = { path = "../wasm-runtime-interface" }

# Sr25519 crypto (Substrate standard)
sp-core = { version = "31.0", default-features = false, features = ["std"] }
schnorrkel = "0.11"

[dev-dependencies]
tempfile = { workspace = true }