[package]
name = "wasm-runtime-interface"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
ipnet = "2.11.0"
url = "2.5.8"
wasmtime = "41.0.3"
bincode = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "rustls-tls"] }
trust-dns-resolver = "0.23.2"
sha2 = { workspace = true }
platform-challenge-sdk-wasm = { path = "../challenge-sdk-wasm" }
