[package]
name = "term-sdk"
version = "0.1.0"
edition = "2021"
description = "SDK for building AI agents for the Terminal Benchmark Challenge"
authors = ["Platform Network"]
license = "Apache-2.0"
repository = "https://github.com/PlatformNetwork/term-challenge"
keywords = ["ai", "agents", "llm", "terminal", "benchmark"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
