[package]
name = "term-sdk"
version = "1.0.0"
edition = "2021"
description = "SDK for building Term Challenge agents"
license = "MIT"
repository = "https://github.com/PlatformNetwork/term-challenge"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"], optional = true }

[features]
default = []
async = ["tokio"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
