[package]
name = "llm_agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "llm_agent"
path = "llm_agent.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
